[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/GameObject.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Struct.gd" type="Script" id=2]
[ext_resource path="res://Assets/Art/Structures/imperium/biomass_reactor.png" type="Texture" id=3]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array(  )
}

[node name="Structure" instance=ExtResource( 1 )]
collision_layer = 4
script = ExtResource( 2 )

[node name="Sprite" parent="." index="6"]
texture = ExtResource( 3 )

[node name="SpawnArea" type="Path2D" parent="." index="10"]
curve = SubResource( 1 )

[node name="BuildTimer" type="Timer" parent="." index="17"]
one_shot = true
[connection signal="timeout" from="BuildTimer" to="." method="_on_BuildTimer_timeout"]
